# GlamVault

./: .gitignore  .lintstagedrc  README.md  backend.Dockerfile  docker-compose.yml  frontend.Dockerfile  package-lock.json  package.json  pyproject.toml  requirements.txt  svelte.config.js  tailwind.config.js
.github/workflows/: CI.yml
api/: __init__.py  main.py  models.py  receiver.py  sql_settings.py  test.py
src/: app.html
src/lib/components/: AddToCartButton.svelte  Authorization.svelte  Footer.svelte  Header.svelte  LinkBar.svelte  MainButton.svelte  NavigationBar.svelte  Registration.svelte
src/routes/: +layout.svelte  +page.svelte
src/routes/about/: +page.svelte
src/routes/account/: +page.svelte
src/routes/admin/: +page.svelte
src/routes/authorization/: +page.svelte
src/routes/catalog/: +page.svelte
src/routes/product/[id]/: +page.svelte
src/routes/registration/: +page.svelte
src/routes/shoppingList/: +page.svelte
