[tool.poetry]
name = "glamvault"
version = "0.1.0"
description = ""
authors = []
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.1"
SQLAlchemy = "^2.0.31"
uvicorn = "^0.30.1"
sqlalchemy-utils = "^0.41.2"
psycopg2 = "^2.9.9"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.3"
isort = "^5.13.2"

[tool.isort]
known_first_party = ["models", "receiver", "sql_settings"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
